Update langchain4j to 0.25, and finish the PromptInfo.tsx.